tests/typing/fail/signature-mismatch-03.stderr
error: node `oui` takes 0 arguments, but 1 was provided
  --> tests/typing/fail/signature-mismatch-03.rs:10:19
   |
10 |         o : int = oui(b);
   |                   ^^^^^^
